REFAC (timeLine component): Simplify styles and improve date handling logic; FIX (Percentage Component): Add margin to container to prevent content overflow

--- a/components/common/properties/percentage/percentage.module.css
+++ b/components/common/properties/percentage/percentage.module.css
@@ -12,6 +12,7 @@
   border: none;
   text-align: center;
   font-family: inherit;
+  margin: 0;
 }
 
 .percentValue
@@ -20,4 +21,5 @@
   height: 100%;
   display: grid;
   place-content: center;
+  margin: 0;
 }
