--- a/components/common/properties/timeLine/styles.module.css
+++ b/components/common/properties/timeLine/styles.module.css
@@ -2,66 +2,38 @@
 {
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     position: relative;
     border-right: 1px solid var(--accent-color);
 }
 
-.calendar-container
+.calendarContainer
 {
     position: absolute;
-    bottom: 0;
-    transform: translatey(100%);
+    top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.progressbarContainer
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     z-index: 2;
 }
 
-.time-line
+.datesLabel
 {
-    cursor: pointer;
-    position: relative;
-    background-color: var(--accent-color);
-    width: 80%;
-    height: 90%;
-    padding: 4px;
-    text-align: center;
-    border-radius: 15px;
-    font-size: 1.2rem;
-}
-
-.time-line p
-{
-    z-index: 1;
-    color: var(--bg-color);
     position: absolute;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
-    width: max-content;
-    top: 20%;
+    z-index: 3;
+    transform: translate(-50%, -130%);
+    user-select: none;
+    font-size: 1.12rem;
+    cursor: pointer;
 }
-
-.progress-bg
-{
-    position: absolute;
-    border-radius: 15px;
-    background-color: rgba(65, 65, 65, 0.22);
-    width: 100%;
-    height: 100%;
-    display: block;
-    top: 0;
-    left: 0;
-}
-
-.progress-bar
-{
-    position: absolute;
-    background-color: var(--progress-color);
-    top: 0;
-    left: 0;
-    border-radius: 15px;
-    height: 100%;
-}
-
-
